apps/hoshiguma/src/k8s/telegraf.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: hoshiguma
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf
      app.kubernetes.io/instance: telegraf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf
        app.kubernetes.io/instance: telegraf
    spec:
      containers:
        - name: telegraf
          image: "docker.io/library/telegraf:1.34-alpine"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf
      volumes:
        - name: config
          configMap:
            name: telegraf

---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-telemetry-feed
  namespace: hoshiguma
spec:
  selector:
    app.kubernetes.io/name: telegraf
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: telemetry-feed
  namespace: hoshiguma
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`telemetry.makerspace.org.uk`) && PathPrefix(`/hoshiguma`)
      services:
        - Kind: Service
          name: telegraf-telemetry-feed
          port: 8080
  tls:
    secretName: tls-cert
